--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/stack": "^7.6.3",
+    "axios": "^1.13.2",
     "expo": "~54.0.23",
+    "expo-haptics": "^15.0.7",
+    "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
