feat: Production-ready improvements
- Replace mock auth with real API calls in authStore
- Add secureStorage integration for token management
- Implement real ChangePassword API endpoint
- Implement DeleteAccount API with KVKK/GDPR compliance
- Add push token backend registration in usePushNotifications
- Add buildNumber (iOS) and versionCode (Android) to app.json
- Fix ESLint parserOptions.project configuration
- Update Expo packages to compatible versions
- Fix MaintenanceScreen SafeAreaView import
- Update authStore tests with proper API mocks
- Add expo-secure-store mock in jest.setup.js

All 1668 tests passing

--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
     "@react-navigation/stack": "^7.6.3",
     "@sentry/react-native": "~7.2.0",
     "axios": "^1.13.2",
-    "expo": "~54.0.26",
-    "expo-constants": "~18.0.10",
-    "expo-device": "~8.0.9",
-    "expo-file-system": "~19.0.19",
-    "expo-haptics": "^15.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "^15.0.7",
-    "expo-localization": "~17.0.7",
-    "expo-location": "^19.0.7",
-    "expo-notifications": "^0.32.13",
-    "expo-secure-store": "^15.0.7",
+    "expo": "~54.0.27",
+    "expo-constants": "~18.0.11",
+    "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.20",
+    "expo-haptics": "~15.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-localization": "~17.0.8",
+    "expo-location": "~19.0.8",
+    "expo-notifications": "^0.32.14",
+    "expo-secure-store": "~15.0.8",
     "i18next": "^25.7.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
