--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.travelmatch.app",
+      "buildNumber": "1",
       "associatedDomains": [
         "applinks:travelmatch.app"
       ],
@@ -25,6 +26,7 @@
     },
     "android": {
       "package": "com.travelmatch.app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
