refactor: Migrate to proper monorepo structure - move mobile files to apps/mobile
BREAKING CHANGE: Mobile app entry point moved from root to apps/mobile/

Changes:
- Moved App.tsx, app.config.ts, eas.json, babel.config.js, index.ts to apps/mobile/
- Created metro.config.js in apps/mobile for monorepo support
- Updated apps/mobile/package.json: main entry point, added dev script
- Updated app.config.ts asset paths (./apps/mobile/assets → ./assets)
- Added dev:mobile, dev:web, dev:admin scripts to root package.json
- Root directory now clean - only contains monorepo tooling

Migration complete: Root-Level Entry → Apps-Based Monorepo ✅

To run mobile app: pnpm dev:mobile (or cd apps/mobile && pnpm start)

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -2,9 +2,10 @@
   "name": "@travelmatch/mobile",
   "version": "1.0.0",
   "description": "TravelMatch Mobile App - React Native + Expo",
-  "main": "index.js",
+  "main": "index.ts",
   "private": true,
   "scripts": {
+    "dev": "expo start",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
