--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -480,6 +480,51 @@ services:
   #     retries: 3
   #     start_period: 60s
 
+  # ============================================================================
+  # TravelMatch Apps (Production)
+  # ============================================================================
+
+  # Web (Next.js Landing Page)
+  web:
+    build:
+      context: .
+      dockerfile: apps/web/Dockerfile
+    container_name: travelmatch-web
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
+    environment:
+      NEXT_PUBLIC_SUPABASE_URL: http://kong:8000
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+    depends_on:
+      - kong
+    networks:
+      - travelmatch-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Admin (React + Refine Dashboard)
+  admin:
+    build:
+      context: .
+      dockerfile: apps/admin/Dockerfile
+    container_name: travelmatch-admin
+    restart: unless-stopped
+    ports:
+      - "8080:80"
+    depends_on:
+      - kong
+    networks:
+      - travelmatch-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+
 # ==============================================================================
 # Volumes (Persistent Data)
 # ==============================================================================
