--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -18,8 +18,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["jest", "@testing-library/jest-native"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.tsx"]
+  "exclude": ["node_modules", "dist", "**/__tests__/**", "**/*.test.tsx"]
 }
