--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,11 +1,11 @@
 {
   "*.{ts,tsx}": [
-    "eslint --fix --max-warnings=0",
+    "eslint --fix",
     "prettier --write",
     "jest --bail --findRelatedTests --passWithNoTests"
   ],
   "*.{js,jsx}": [
-    "eslint --fix --max-warnings=0",
+    "eslint --fix",
     "prettier --write"
   ],
   "*.{json,md,yml,yaml}": [
