🗄️ Supabase cleanup: Remove unused video infra & placeholder migrations
Changes:
- Remove 14 placeholder/empty migrations (video_soc2, ai_ml_services, etc.)
- Add realtime subscriptions for messages, notifications, conversations, requests
- Add cleanup migration to drop video_transcriptions table (OpenAI Whisper removed)
- Enable Google & Apple OAuth in config.toml
- Fix duplicate timestamp (atomic_transfer_rpc)

Video Policy:
- Platform is NOT video-focused
- Videos only for: proof verification (Claude AI) & optional escrow thank-you
- Keep video-uploads bucket & uploaded_images table

Migrations: 49 → 36 (clean, no placeholders)

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -59,10 +59,21 @@ enable_signup = false
 enable_confirmations = false
 
 [auth.external.apple]
-enabled = false
+enabled = true
+# Apple Sign In credentials configured via Supabase Dashboard:
+# - Service ID (client_id)
+# - Team ID
+# - Key ID
+# - Private Key (.p8 file contents)
+# See: https://supabase.com/docs/guides/auth/social-login/auth-apple
 
 [auth.external.google]
-enabled = false
+enabled = true
+# Google OAuth credentials configured via Supabase Dashboard:
+# - Client ID
+# - Client Secret
+# See: https://supabase.com/docs/guides/auth/social-login/auth-google
 
 [functions]
+# Edge Functions configuration
 # verify_jwt = false
