chore: replace old supabase project ref with bjikxgtbptrvawkguypv

--- a/.env.oauth.example
+++ b/.env.oauth.example
@@ -37,7 +37,7 @@ FACEBOOK_APP_SECRET=your-facebook-app-secret
 # SUPABASE OAUTH CALLBACK
 # ============================================
 # This should match your Supabase project URL
-OAUTH_REDIRECT_URI=https://isvstmzuyxuwptrrhkyi.supabase.co/auth/v1/callback
+OAUTH_REDIRECT_URI=https://bjikxgtbptrvawkguypv.supabase.co/auth/v1/callback
 
 # Mobile app deep link callback
 OAUTH_MOBILE_REDIRECT=travelmatch://auth/callback
