--- a/services/.env.example
+++ b/services/.env.example
@@ -2,8 +2,10 @@
 # These are used for local testing with `supabase functions serve`
 
 # Supabase
-SUPABASE_URL=https://xxxxx.supabase.co
-SUPABASE_SERVICE_KEY=eyJhbGci...
+
+# Supabase (NEW)
+SUPABASE_URL=https://bjikxgtbptrvawkguypv.supabase.co
+# SUPABASE_SERVICE_KEY=... (gerekirse yeni service key buraya eklenmeli)
 
 # OpenAI
 OPENAI_API_KEY=sk-xxxxx
