--- a/.github/workflows/_disabled/design-system.yml
+++ b/.github/workflows/_disabled/design-system.yml
@@ -13,45 +13,45 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Required for Chromatic
-      
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'pnpm'
-      
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
+
       - name: Run linter
         run: pnpm --filter @travelmatch/design-system run lint
-      
+
       - name: Run type check
         run: pnpm --filter @travelmatch/design-system run type-check
-      
+
       - name: Run unit tests with coverage
         run: pnpm --filter @travelmatch/design-system run test:ci
-      
+
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
         with:
           files: ./packages/design-system/coverage/lcov.info
           flags: design-system
           name: design-system-coverage
-      
+
       - name: Build package
         run: pnpm --filter @travelmatch/design-system run build
-      
+
       - name: Check bundle size
         run: |
           SIZE=$(du -sk packages/design-system/dist | cut -f1)
@@ -65,39 +65,41 @@ jobs:
   visual-regression:
     runs-on: ubuntu-latest
     needs: test
-    
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'pnpm'
-      
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
+
       - name: Install Playwright
         run: npx playwright install --with-deps
-      
+
       - name: Build Storybook
         run: pnpm --filter @travelmatch/design-system run build-storybook
-      
+
       - name: Run Storybook tests (accessibility + performance)
         run: pnpm --filter @travelmatch/design-system run test-storybook:ci
         env:
           NODE_ENV: test
-      
+
       - name: Run Chromatic (visual regression)
+        if: ${{ secrets.CHROMATIC_TOKEN != '' }}
         uses: chromaui/action@v1
+        continue-on-error: true
         with:
           projectToken: ${{ secrets.CHROMATIC_TOKEN }}
           buildScriptName: build-storybook
@@ -108,29 +110,29 @@ jobs:
 
   deploy-storybook:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && secrets.VERCEL_TOKEN != ''
     needs: visual-regression
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'pnpm'
-      
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
+
       - name: Build Storybook
         run: pnpm --filter @travelmatch/design-system run build-storybook
-      
+
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
