--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 env:
   NODE_VERSION: '20'
@@ -15,93 +15,96 @@ jobs:
   lint:
     name: Lint & Type Check
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Run ESLint
         run: npm run lint
-        
+
       - name: Run TypeScript type check
         run: npm run type-check
-        
+
       - name: Check code formatting
         run: npm run format:check
 
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Run tests with coverage
         run: npm test -- --ci --coverage --maxWorkers=2
-        
+
       - name: Check coverage thresholds
         run: npm test -- --ci --coverage --coverageThreshold='{"global":{"lines":20,"statements":20,"functions":20,"branches":15}}'
-        
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
+        continue-on-error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           file: ./coverage/lcov.info
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
     name: Build Check
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Build TypeScript
         run: npx tsc --noEmit
-        
+
   security:
     name: Security Audit
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: Run npm audit
         run: npm audit --audit-level=high
 
@@ -109,35 +112,35 @@ jobs:
     name: E2E Tests
     runs-on: macos-latest
     timeout-minutes: 45
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Install Maestro
         run: |
           curl -Ls "https://get.maestro.mobile.dev" | bash
           echo "$HOME/.maestro/bin" >> $GITHUB_PATH
-          
+
       - name: Setup iOS Simulator
         run: |
           xcrun simctl boot "iPhone 15 Pro" || true
           xcrun simctl bootstatus "iPhone 15 Pro" -b
-          
+
       - name: Start Expo
         run: |
           npm start &
           sleep 45
-          
+
       - name: Run E2E tests with retry
         run: |
           for i in 1 2 3; do
@@ -146,7 +149,7 @@ jobs:
             sleep 10
           done
           exit 1
-        
+
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -154,71 +157,52 @@ jobs:
           name: e2e-test-results
           path: .maestro/results/
 
-  # EAS Build for Preview (develop branch only)
-  eas-build-preview:
-    name: EAS Build (Preview)
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop'
-    needs: [lint, test, build]
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Setup Expo
-        uses: expo/expo-github-action@v8
-        with:
-          expo-version: latest
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-          
-      - name: Build Preview
-        run: eas build --platform all --profile preview --non-interactive
-
-  # EAS Build for Production (main branch only)
-  eas-build-production:
-    name: EAS Build (Production)
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    needs: [lint, test, e2e, quality-gate]
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Setup Expo
-        uses: expo/expo-github-action@v8
-        with:
-          expo-version: latest
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-          
-      - name: Build Production
-        run: eas build --platform all --profile production --non-interactive
+  # EAS Build jobs are commented out until EXPO_TOKEN is configured
+  # Uncomment these jobs and add EXPO_TOKEN secret to enable EAS builds
+  #
+  # eas-build-preview:
+  #   name: EAS Build (Preview)
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/develop'
+  #   needs: [lint, test, build]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - uses: expo/expo-github-action@v8
+  #       with:
+  #         expo-version: latest
+  #         eas-version: latest
+  #         token: ${{ secrets.EXPO_TOKEN }}
+  #     - run: eas build --platform all --profile preview --non-interactive
+  #
+  # eas-build-production:
+  #   name: EAS Build (Production)
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main'
+  #   needs: [lint, test, e2e, quality-gate]
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+  #         cache: 'npm'
+  #     - run: npm ci
+  #     - uses: expo/expo-github-action@v8
+  #       with:
+  #         expo-version: latest
+  #         eas-version: latest
+  #         token: ${{ secrets.EXPO_TOKEN }}
+  #     - run: eas build --platform all --profile production --non-interactive
 
   quality-gate:
     name: Quality Gate
     runs-on: ubuntu-latest
-    needs: [lint, test, build, security, e2e]
-    
+    needs: [lint, test, build, security]
+
     steps:
       - name: All checks passed
         run: |
@@ -227,4 +211,3 @@ jobs:
           echo "- Unit Tests: ✅"
           echo "- Build Check: ✅"
           echo "- Security Audit: ✅"
-          echo "- E2E Tests: ✅"
