--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -51,6 +51,8 @@ jobs:
         run: pnpm audit --audit-level=high
         continue-on-error: true
 
+      # Snyk scan is optional - requires SNYK_TOKEN secret
+      # Sign up at https://snyk.io and add token to GitHub secrets
       - name: Snyk Security Scan
         uses: snyk/actions/node@master
         continue-on-error: true
