--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -97,6 +97,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
+    "@eslint/js": "^9.39.2",
     "@sentry/tracing": "^7.120.4",
     "@storybook/react-native": "^10.1.0",
     "@testing-library/react-native": "^13.3.3",
@@ -123,7 +124,8 @@
     "prettier": "^2.8.8",
     "react-test-renderer": "19.1.0",
     "ts-jest": "^29.4.6",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.50.0"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -131,7 +133,9 @@
   },
   "expo": {
     "install": {
-      "exclude": ["@shopify/flash-list"]
+      "exclude": [
+        "@shopify/flash-list"
+      ]
     }
   }
 }
