fix: remove deprecated @testing-library/jest-native from tsconfig types

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -20,7 +20,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["jest", "@testing-library/jest-native"]
+    "types": ["jest"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
