--- a/packages/monitoring/package.json
+++ b/packages/monitoring/package.json
@@ -10,11 +10,11 @@
     "./examples": "./examples/monitoring-examples.tsx"
   },
   "peerDependencies": {
+    "@react-navigation/native": "^6.0.0",
     "react": "^18.0.0",
-    "react-native": "^0.74.0",
-    "@react-navigation/native": "^6.0.0"
+    "react-native": "^0.74.0"
   },
   "dependencies": {
-    "@datadog/mobile-react-native": "^2.0.0"
+    "@datadog/mobile-react-native": "^2.14.0"
   }
 }
