--- a/apps/admin/.env.example
+++ b/apps/admin/.env.example
@@ -21,8 +21,9 @@ NEXT_PUBLIC_SENTRY_DSN=https://xxxxx@xxxxx.ingest.sentry.io/xxxxx
 NEXT_PUBLIC_POSTHOG_KEY=phc_xxxxx
 NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
 
-# 2FA Encryption
+# 2FA Encryption (REQUIRED - generate with: openssl rand -base64 32)
 TOTP_ENCRYPTION_KEY=your-32-char-encryption-key-here
+TOTP_ENCRYPTION_SALT=your-16-char-salt-minimum
 
 # Session
 SESSION_SECRET=your-session-secret-here
