--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   NODE_VERSION: '20'
+  PNPM_VERSION: '8'
 
 jobs:
   deploy-production:
@@ -17,15 +18,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
         
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          cache: 'pnpm'
           
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
         
       - name: Setup Expo
         uses: expo/expo-github-action@v8
@@ -53,5 +59,5 @@ jobs:
       - name: Deployment Success
         run: |
           echo "🚀 Production deployment completed!"
-          echo "Release: ${{ github.event.release.tag_name }}"
-          echo "Changelog: ${{ github.event.release.body }}"
+          echo "Release: \${{ github.event.release.tag_name }}"
+          echo "Changelog: \${{ github.event.release.body }}"
